[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "txfetch"
version = "1.0.0"
description = "blockchain transaction retrieval tool"
authors = [{ name = "xaynov" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "prompt_toolkit>=3.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
txfetch = "main:main"
txf     = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]
